Upgrade Spark to 3.5.8 and fix Java 17 incompatibility
Spark 3.2.4 does not support Java 17: SparkContext initialization
aborted every test suite with java.lang.IllegalAccessError (module
java.base does not export sun.nio.ch to the unnamed module), since
Spark's internal reflection touches JDK-internal packages that the
module system hides by default on Java 9+. spark-submit's launch
scripts normally add the required --add-opens flags; running Spark
embedded from sbt does not, so this was failing 100% of the time on
any machine with a modern JDK.

Fix: bump to Spark 3.5.8 (first Spark 3.x line with official Java 17
support, still Scala 2.12), and add the required --add-opens flags via
Test/run javaOptions with fork := true so they apply automatically on
`sbt test` and `sbt run` without the developer having to pass any JVM
flags by hand.

Also bumps scalatest 3.0.8 -> 3.2.19, which meant migrating TestInit
off the removed unqualified FlatSpec/Matchers traits to
org.scalatest.flatspec.AnyFlatSpec / org.scalatest.matchers.should.Matchers,
and adds -encoding UTF-8 plus explicit -Dfile.encoding=UTF-8 on forked
JVMs so accented source literals print correctly regardless of the
host OS's default codepage.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>